--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
-* {
+* { /*sets entire website margin and padding*/
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
-
+/*sets background color for the entire site*/
 body {
     background-color: #d9dcd6;
 }
@@ -31,11 +31,11 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
+/*removes the points from the left of each*/
 .links ul {
     list-style-type: none;
 }
-
+/*Allows links to be side by side*/
 .jumps {
     display: inline-block;
     margin-left: 25px;
@@ -138,7 +138,7 @@ p {
     font-size: 36px;
 }
 
-
+/*aligns footer to middle, also makes background opacity clear to match the rest of the page*/
 .footer{
     padding: 30px;
     clear: both;
